# seyeon-oversight

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README-DOCKER.md  README.md  docker-compose.yml
.github/: FUNDING.yml
apps/oversight/: Cargo.toml
apps/oversight/apps/oversight/cache/: aave_historical.json  act_historical.json  ada_historical.json  apt_historical.json  arb_historical.json  atom_historical.json  avax_historical.json  bch_historical.json  bera_historical.json  bgb_historical.json  bigtime_historical.json  bnb_historical.json  btc_historical.json  deep_historical.json  doge_historical.json  dot_historical.json  dydx_historical.json  ens_historical.json  eos_historical.json  eth_historical.json  fet_historical.json  form_historical.json  gala_historical.json  goat_historical.json  grass_historical.json  hbar_historical.json  hype_historical.json  icp_historical.json  inj_historical.json  ip_historical.json  jup_historical.json  layer_historical.json  ldo_historical.json  link_historical.json  ltc_historical.json  mana_historical.json  mkr_historical.json  move_historical.json  near_historical.json  not_historical.json  (+29 more)
apps/oversight/assets/: options.json
apps/oversight/src/: data_fetcher.rs  main.rs
crates/seyeon_coinlore/: Cargo.toml
crates/seyeon_coinlore/src/: exchanges.rs  fetch_crypto_data.rs  global_market.rs  lib.rs  main.rs  markets.rs  social_stats.rs  tickers.rs
crates/seyeon_cryptocompare/: .env  .env.example  Cargo.toml
crates/seyeon_cryptocompare/src/: histoday.rs  lib.rs  method.rs
crates/seyeon_cryptocompare/tests/: histoday.rs
crates/seyeon_email/: .env  .env.example  Cargo.toml
crates/seyeon_email/src/: lib.rs
crates/seyeon_email/tests/: send_mail.rs
crates/seyeon_rapidapi/: .env  .env.example  Cargo.toml
crates/seyeon_rapidapi/src/: fgi.rs  lib.rs  method.rs
crates/seyeon_rapidapi/tests/: fgi.rs
crates/seyeon_redis/: Cargo.toml
crates/seyeon_redis/src/: lib.rs  models.rs  operations.rs
crates/seyeon_shared_models/: Cargo.toml
crates/seyeon_shared_models/src/: lib.rs
crates/seyeon_trading_engine/: Cargo.toml
crates/seyeon_trading_engine/src/: data_point.rs  engine.rs  indicators.rs  lib.rs
doc/: blueprint.txt
