[package]
name = "trading_engine_test_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
seyeon_trading_engine = { version = "0.1.0", path = "../../crates/seyeon_trading_engine" }
seyeon_rapidapi = { path = "../../crates/seyeon_rapidapi" }
seyeon_cryptocompare = { path = "../../crates/seyeon_cryptocompare" }
seyeon_shared_models = { path = "../../crates/seyeon_shared_models" }
seyeon_redis = { path = "../../crates/seyeon_redis" }
polars_excel_writer = "0.12.0"
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.96"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
redis = { version = "0.24.0", features = ["tokio-comp"] }