[package]
name = "oversight"
version = "0.1.0"
edition = "2021"

[dependencies]
seyeon_trading_engine = { path = "../../crates/seyeon_trading_engine" }
seyeon_rapidapi = { path = "../../crates/seyeon_rapidapi" }
seyeon_cryptocompare = { path = "../../crates/seyeon_cryptocompare" }
seyeon_coinlore = { path = "../../crates/seyeon_coinlore" }
seyeon_redis = { path = "../../crates/seyeon_redis" }
seyeon_shared_models = { path = "../../crates/seyeon_shared_models" }
seyeon_email = { path = "../../crates/seyeon_email" }
polars_excel_writer = "0.12.0"
polars = { version = "0.46.0", features = [
    "abs",
    "cum_agg",
    "dtype-datetime",
    "ewma",
    "lazy",
    "pct_change",
    "rolling_window",
] }
clap = { version = "4.5.3", features = ["derive"] }
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.96"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.57"
rand = "0.8.5"