[package]
name = "seyeon_rapidapi"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros"] }
