[package]
name = "seyeon_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
seyeon_shared_models = { path = "../../crates/seyeon_shared_models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
